--- a/views/restricted/Blog-patch.ejs
+++ b/views/restricted/Blog-patch.ejs
@@ -26,7 +26,7 @@
 </div>
 
 <script>
-    var toolbarOptions = [
+    const toolbarOptions = [
         ['bold', 'italic', 'underline', 'strike'],        // toggled buttons
         ['blockquote', 'code-block'],
         [{ 'list': 'ordered'}, { 'list': 'bullet' }],
@@ -40,7 +40,7 @@
         ['clean']                                         // remove formatting button
     ];
 
-    var quill = new Quill('#editor', {
+    let quill = new Quill('#editor', {
         modules: {
             toolbar: toolbarOptions,
         },
