--- a/views/Payment.ejs
+++ b/views/Payment.ejs
@@ -123,8 +123,8 @@
       orderId = data.orderId;
       clientSecret = data.clientSecret;
 
-      var elements = stripe.elements();
-      var style = {
+      let elements = stripe.elements();
+      let style = {
         base: {
         color: "#32325d",
         fontFamily: '"Helvetica Neue", Helvetica, sans-serif',
@@ -140,7 +140,7 @@
       };
 
       // Create an instance of the card Element.
-      var card = elements.create('card', {style: style});
+      let card = elements.create('card', {style: style});
       card.mount('#card-element');
 
       card.on("change", function (event) {
@@ -149,14 +149,14 @@
         document.querySelector("#card-errors").textContent = event.error ? event.error.message : "";
       });
 
-      var form = document.getElementById("payment-form");
+      let form = document.getElementById("payment-form");
       form.addEventListener("submit", function(event) {
         event.preventDefault();
         payWithCard(stripe, card, data.clientSecret);
       });
     })
 
-    var payWithCard = function(stripe, card, clientSecret) {
+    let payWithCard = function(stripe, card, clientSecret) {
       stripe.confirmCardPayment(clientSecret, {
         receipt_email: document.getElementById('email').value,
         payment_method: {
